deploy/kubernetes/paseo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paseo
  labels:
    pod-security.kubernetes.io/enforce: restricted
